# coze-py

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  1.py  2.py  3.py  4.py  5.py  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  main.py  pyproject.toml  test_out_resp.py  test_stream.py
.cache/: coze_token_57294420732781205987760324720643.app.coze.json
.github/: release-drafter.yml
.github/workflows/: check_sdk_regulation.py  ci.yml  ci_chat_stream.yml  pypi-release.yml  required-labels.yml  sdk-regulation.yml
chat_stream_test/: main.py  pyproject.toml
cozepy/: __init__.py  auth.py  bot.py  cache.py  chat.py  config.py  conversation.py  coze.py  exception.py  log.py  model.py  request.py  util.py  version.py  workspace.py
cozepy/api_apps/: __init__.py
cozepy/api_apps/events/: __init__.py
cozepy/apps/: __init__.py
cozepy/apps/collaborators/: __init__.py
cozepy/audio/: __init__.py
cozepy/audio/live/: __init__.py
cozepy/audio/rooms/: __init__.py
cozepy/audio/speech/: __init__.py
cozepy/audio/transcriptions/: __init__.py
cozepy/audio/translations/: __init__.py
cozepy/audio/voiceprint_groups/: __init__.py
cozepy/audio/voices/: __init__.py
cozepy/auth/: __init__.py
cozepy/benefit_limitations/: __init__.py
cozepy/benefits/: __init__.py
cozepy/bill_tasks/: __init__.py
cozepy/bot/: __init__.py
cozepy/bot/v1/: __init__.py
cozepy/bots/: __init__.py
cozepy/bots/collaboration_modes/: __init__.py
cozepy/bots/collaborators/: __init__.py
cozepy/bots/versions/: __init__.py
cozepy/chat/: __init__.py
cozepy/chat/message/: __init__.py
cozepy/chat/v3/: __init__.py
cozepy/commerce_benefit/: __init__.py
cozepy/connectors/: __init__.py
cozepy/connectors/bots/: __init__.py
cozepy/conversation/: __init__.py
cozepy/conversation/v1/: __init__.py
cozepy/conversations/: __init__.py
cozepy/conversations/message/: __init__.py
cozepy/datasets/: __init__.py
cozepy/enterprises/: __init__.py
cozepy/file/: __init__.py
cozepy/files/: __init__.py
cozepy/folders/: __init__.py
cozepy/knowledge/: __init__.py
cozepy/rooms/: __init__.py
cozepy/templates/: __init__.py
cozepy/users/: __init__.py
cozepy/variables/: __init__.py
cozepy/websockets/: __init__.py  ws.py
cozepy/workflow/: __init__.py
cozepy/workflows/: __init__.py
cozepy/workspace/: __init__.py
cozepy/workspaces/: __init__.py
examples/: apps_list.py  audio.py  audio_voiceprint_groups_create.py  audio_voiceprint_groups_delete.py  audio_voiceprint_groups_features_create.py  audio_voiceprint_groups_features_delete.py  audio_voiceprint_groups_features_list.py  audio_voiceprint_groups_features_speaker_identify.py  audio_voiceprint_groups_features_update.py  audio_voiceprint_groups_list.py  audio_voiceprint_groups_speaker_identify.py  audio_voiceprint_groups_update.py  auth_oauth_device.py  auth_oauth_jwt.py  auth_oauth_pkce.py  auth_oauth_web.py  auth_pat.py  benchmark_ark_text.py  benchmark_text_chat.py  benchmark_websockets_chat.py  bot_create.py  bot_create_advanced.py  bot_publish.py  bot_retrieve.py  bot_unpublish.py  bot_update.py  bots_list.py  chat_conversation_stream.py  chat_download_file.py  chat_local_plugin.py  chat_multimode_stream.py  chat_no_stream.py  chat_oneonone_audio.py  chat_simple_audio.py  chat_stream.py  cli.py  connector_bot_update.py  conversation.py  conversation_create.py  conversation_delete.py  (+34 more)
examples/quickstart/: agent-quickstart.py
examples/utils/: __init__.py
pycoze/: auth.py  bot.py  coze.py  model.py  request.py
tests/: config.py  test_api_apps.py  test_apps.py  test_audio_live.py  test_audio_rooms.py  test_audio_speech.py  test_audio_translations.py  test_audio_voiceprint_groups_features.py  test_audio_voices.py  test_auth.py  test_benefit_limitations.py  test_benefits.py  test_bill_tasks.py  test_bot.py  test_bots.py  test_chat.py  test_chat_message.py  test_chat_messages.py  test_commerce_benefit.py  test_connectors.py  test_conversation.py  test_conversation_message.py  test_conversations.py  test_conversations_messages.py  test_conversations_messages_feedback.py  test_dataset.py  test_datasets.py  test_datasets_documents.py  test_datasets_images.py  test_enterprises_members.py  test_enterprises_organizations.py  test_exception.py  test_file.py  test_folders.py  test_knowledge.py  test_knowledge_documents.py  test_log.py  test_model.py  test_request.py  test_room.py  (+13 more)
tests/testdata/: chat_audio_stream_resp.txt  chat_error_resp.txt  chat_failed_resp.txt  chat_invalid_resp.txt  chat_text_stream_resp.txt  private_key.pem  workflow_run_invalid_stream_resp.txt  workflow_run_stream_resp.txt  workflows_chat_stream_resp.txt
(+24 files in other folders)
