[project]
name = "cozepy"
version = "0.16.2"
description = "OpenAPI SDK for Coze(coze.com/coze.cn)"
authors = [
    {name = "chyroc", email = "chyroc@bytedance.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.5.0",
    "authlib>=1.2.0",
    "httpx>=0.24.0; python_version<='3.7'",
    "httpx>=0.27.0; python_version>='3.8'",
    "typing-extensions>=4.3.0",
    "distro>=1.9.0",
    "websockets>=14.1.0; python_version>='3.9'",
    "websockets>=13.1.0,<14.0.0; python_version>='3.8' and python_version<'3.9'",
    "websockets>=11.0.3,<12.0.0; python_version>='3.7' and python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
    "pre-commit>=2.9.0",
    "respx>=0.21.1",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6.0",
    "pre-commit>=2.9.0",
    "respx>=0.21.1",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 120
respect-gitignore = false

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = [
    "examples/",
    "tests/"
]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_lines = [
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "raise NotImplementedError",
]
